# mjpg-streamer

./: .drone.yml  .gitignore  CHANGELOG  README.md  apt-installer.sh  mjpg_streamer.c  mjpg_streamer.h  pi_optional.patch  pkgnames.info  tox.ini  utils.c
.github/: dependabot.yml
mjpg-streamer-experimental/: CHANGELOG  CMakeLists.txt  Dockerfile  Makefile  README  README-UNSTABLE  README.md  TODO  build.sh  docker-compose.yml  docker-start.sh  download_pplite2.8_libs.sh  makedeb.sh  mjpg_streamer.c  mjpg_streamer.h  mjpg_streamer@.service  mjpg_streamer@.socket  postinstall.sh  start.sh  utils.c  utils.h
mjpg-streamer-experimental/Paddle-Lite/include/: paddle_use_kernels.h  paddle_use_ops.h
mjpg-streamer-experimental/cmake/: FindGphoto2.cmake  FindProtobuf-c.cmake  FindZeroMQ.cmake  mjpg_streamer_utils.cmake
mjpg-streamer-experimental/plugins/: input.h  output.h
mjpg-streamer-experimental/plugins/input_control/: Makefile  dynctrl.c  dynctrl.h  input_uvc.c  uvc_compat.h  uvcvideo.h
mjpg-streamer-experimental/plugins/input_event/: CMakeLists.txt  README.md  input_event.c  input_event.h
mjpg-streamer-experimental/plugins/input_file/: CMakeLists.txt  Makefile  input_file.c
mjpg-streamer-experimental/plugins/input_gspcav1/: jdatatype.h  marker.c  marker.h  readme.spcacat  utils.h
mjpg-streamer-experimental/plugins/input_gstreamer/: CMakeLists.txt  README.md  input_gstreamer.cpp  input_gstreamer.h
mjpg-streamer-experimental/plugins/input_http/: CMakeLists.txt  Makefile  README.md  http_utils.c  http_utils.h  input_http.c  misc.c  misc.h  mjpg-proxy.c  mjpg-proxy.h  version.h
mjpg-streamer-experimental/plugins/input_http/libepeg/: COPYING  COPYING-PLAIN  Epeg.h  epeg license note.txt  epeg_main.c  epeg_private.h
mjpg-streamer-experimental/plugins/input_httpout/: CMakeLists.txt  README.md  input_httpout.c
mjpg-streamer-experimental/plugins/input_libcamera/: CMakeLists.txt  LibCamera.cpp  LibCamera.h  README.md  common.h  input_libcamera.cpp  input_libcamera.h  jpeg_utils.c  jpeg_utils.h
mjpg-streamer-experimental/plugins/input_opencv/: CMakeLists.txt  README.md  input_opencv.cpp  input_opencv.h
mjpg-streamer-experimental/plugins/input_opencv/filters/cvfilter_cpp/: CMakeLists.txt  README.md  filter_cpp.cpp
mjpg-streamer-experimental/plugins/input_opencv/filters/cvfilter_py/: CMakeLists.txt  README.md  conversion.cpp  conversion.h  example_filter.py  filter_py.cpp
mjpg-streamer-experimental/plugins/input_opencv_file/: CMakeLists.txt  README.md  input_opencv_file.cpp  input_opencv_file.h
mjpg-streamer-experimental/plugins/input_ptp2/: CMakeLists.txt  Makefile  input_ptp2.c  input_ptp2.h
mjpg-streamer-experimental/plugins/input_raspicam/: CMakeLists.txt  README.md  RaspiCamControl.c  RaspiCamControl.h  input_raspicam.c
mjpg-streamer-experimental/plugins/input_raspicam/mmal/: CMakeLists.txt  mmal.h  mmal_buffer.h  mmal_clock.h  mmal_common.h  mmal_component.h  mmal_encodings.h  mmal_events.h  mmal_format.h  mmal_logging.h  mmal_metadata.h  mmal_parameters.h  mmal_parameters_audio.h  mmal_parameters_camera.h  mmal_parameters_clock.h  mmal_parameters_common.h  mmal_parameters_video.h  mmal_pool.h  mmal_port.h  mmal_queue.h  mmal_types.h
mjpg-streamer-experimental/plugins/input_raspicam/mmal/core/: CMakeLists.txt  mmal_buffer.c  mmal_buffer_private.h  mmal_clock.c  mmal_clock_private.h  mmal_component.c  mmal_component_private.h  mmal_core_private.h  mmal_events.c  mmal_format.c  mmal_logging.c  mmal_pool.c  mmal_port.c  mmal_port_clock.c  mmal_port_private.h  mmal_queue.c
mjpg-streamer-experimental/plugins/input_raspicam/mmal/openmaxil/: mmalomx_util_params_camera.c
mjpg-streamer-experimental/plugins/input_socket/: CMakeLists.txt  Makefile  input_socket.c
mjpg-streamer-experimental/plugins/input_testpicture/: Makefile  input_testpicture.c  testpictures.h
mjpg-streamer-experimental/plugins/input_uvc/: CMakeLists.txt  Makefile  README.md  dynctrl.c  dynctrl.h  huffman.h  input_uvc.c  jpeg_utils.c  jpeg_utils.h  uvc_compat.h  uvcvideo.h  v4l2uvc.c  v4l2uvc.h
mjpg-streamer-experimental/plugins/input_v4l2loopback/: CMakeLists.txt  Makefile  input_v4l2loopback.c
mjpg-streamer-experimental/plugins/output_autofocus/: Makefile  output_autofocus.c  processJPEG_onlyCenter.c  processJPEG_onlyCenter.h
mjpg-streamer-experimental/plugins/output_file/: CMakeLists.txt  Makefile  output_file.c  output_file.h
mjpg-streamer-experimental/plugins/output_file/examples/: change_filename.sh  ftp_upload.sh  show_filename.sh
mjpg-streamer-experimental/plugins/output_http/: CMakeLists.txt  Makefile  README.md  httpd.c  httpd.h  output_http.c
mjpg-streamer-experimental/plugins/output_modect/: CMakeLists.txt  README.md  control.sh  fileio.c  fonts.c  modect_funcs.c  motion_status.c  omparms.h  output_modect.c  output_modect.h
mjpg-streamer-experimental/plugins/output_motion/: CMakeLists.txt  README.md  output_motion.c
mjpg-streamer-experimental/plugins/output_motion/examples/: action.sh
mjpg-streamer-experimental/plugins/output_ndi/: CMakeLists.txt  output_ndi.cpp
mjpg-streamer-experimental/plugins/output_rtsp/: CMakeLists.txt  Makefile  output_rtsp.c  rtsp.c
mjpg-streamer-experimental/plugins/output_udp/: CMakeLists.txt  Makefile  output_udp.c
mjpg-streamer-experimental/plugins/output_viewer/: CMakeLists.txt  Makefile  README.md  output_viewer.c
mjpg-streamer-experimental/plugins/output_zmqserver/: CMakeLists.txt  Makefile  README.md  output_zmqserver.c  output_zmqserver.h  package.proto
mjpg-streamer-experimental/scripts/: README.md  make_deb.sh  mjpg-streamer.default  mjpg-streamer.init  mjpg-streamer.service
mjpg-streamer-experimental/www/: JQuerySpinBtn.css  JQuerySpinBtn.js  control.htm  fix.css  functions.js  index.html  java.html  java_control.html  java_simple.html  javascript.html  javascript_motiondetection.html  javascript_simple.html  jquery.rotate.js  jquery.ui.core.min.js  jquery.ui.custom.css  jquery.ui.tabs.min.js  jquery.ui.widget.min.js  static.html  static_simple.html  stream.html  stream_simple.html  style.css  videolan.html
(+198 files in other folders)
